--- a/Páginas/simulador_cotas.html
+++ b/Páginas/simulador_cotas.html
@@ -98,7 +98,7 @@
     </section>
 
 
-<!--
+    <!--
     <section id="Simulador" class="section-padding section-connector">
         <div class="container">
             <div class="row">
@@ -198,9 +198,11 @@
                                     </label>
                                 </div>
                             </div>
-                            <small>*Para concorrer a esta ação afirmativa é necessário que todo o Ensino Médio tenha sido
+                            <small>*Para concorrer a esta ação afirmativa é necessário que todo o Ensino Médio tenha
+                                sido
                                 feito em Escola Pública. Candidato que tenha cursado uma disciplina isolada em escola
-                                privada ou que tenha sido bolsista, mesmo que integral, de escola privada não pode marcar
+                                privada ou que tenha sido bolsista, mesmo que integral, de escola privada não pode
+                                marcar
                                 esta opção. Saiba mais na pergunta específica aqui no Portal!</small>
                         </div>
                     </div>
@@ -217,7 +219,8 @@
                                     </label>
                                 </div>
                             </div>
-                            <small>*O cálculo deve ser da renda bruta somada de todos os membros do grupo familiar. Saiba o
+                            <small>*O cálculo deve ser da renda bruta somada de todos os membros do grupo familiar.
+                                Saiba o
                                 valor exato na pergunta específica no Portal!</small>
                         </div>
                     </div>
@@ -234,7 +237,8 @@
                                     </label>
                                 </div>
                             </div>
-                            <small>*Informe-se sobre a autodeclaração étnico-racial na pergunta aqui no site e veja como é
+                            <small>*Informe-se sobre a autodeclaração étnico-racial na pergunta aqui no site e veja como
+                                é
                                 feita a verificação dessa condição: neste item.</small>
                         </div>
                     </div>
@@ -291,21 +295,34 @@
                             <div class="eduexp p-5 pt-0">
                                 <h5>L1 - Escola pública e renda inferior</h5>
                                 <small class="text-brand">Criação do seu primeiro repositório</small>
-                                <p class="mb-0">...</p>
+                                <p class="mb-0">candidato egresso do Sistema Público de Ensino Médio com renda familiar
+                                    bruta mensal igual ou inferior a 1,5 salário mínimo nacional per capita;</p>
                             </div>
                         </div>
                         <div class="col-12">
-                            <div class="eduexp p-5 pt-0 pb-0">
+                            <div class="eduexp p-5 pt-0">
                                 <h5>L2 - Escola pública, renda inferior e autodeclarado preto, pardo ou indígena</h5>
                                 <small class="text-brand">Trabalhando com as Branches</small>
-                                <p class="mb-0">...</p>
+                                <p class="mb-0">candidato egresso Sistema Público de Ensino Médio com renda familiar
+                                    bruta mensal igual ou inferior a 1,5 salário mínimo nacional per capita
+                                    autodeclarado preto, pardo ou indígena;</p>
                             </div>
                         </div>
                         <div class="col-12">
                             <div class="eduexp p-5 pt-0">
                                 <h5>L3/L5 - Escola pública e renda não considerada</h5>
                                 <small class="text-brand">Trabalhando com as commits</small>
-                                <p class="mb-0">...</p>
+                                <p class="mb-0">candidato egresso do Sistema Público de Ensino Médio independentemente
+                                    da renda familiar;</p>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="eduexp p-5 pt-0 pb-0">
+                                <h5>L4/L6 - Escola pública, renda não considerada e preto, pardo ou indígena</h5>
+                                <small class="text-brand">Trabalhando com os pull requests</small>
+                                <p class="mb-0">candidato egresso do Sistema Público de Ensino Médio independentemente
+                                    da
+                                    renda familiar, autodeclarado preto, pardo ou indígena.</p>
                             </div>
                         </div>
                     </div>
@@ -314,30 +331,40 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="eduexp p-5 pt-0">
-                                <h5>L4/L6 - Escola pública, renda não considerada e preto, pardo ou indígena</h5>
-                                <small class="text-brand">Trabalhando com os pull requests</small>
-                                <p class="mb-0">...</p>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="eduexp p-5 pt-0 pb-0">
                                 <h5>L9 - Escola pública, renda inferior e pessoa com deficiência</h5>
                                 <small class="text-brand">Etapa final</small>
-                                <p class="mb-0">...</p>
+                                <p class="mb-0">candidato egresso do Sistema Público de Ensino Médio com renda familiar
+                                    bruta mensal igual ou inferior a 1,5 salário mínimo nacional per capita e Pessoa com
+                                    Deficiência;</p>
                             </div>
                         </div>
                         <div class="col-12">
-                            <div class="eduexp p-5 pt-0 pb-0">
+                            <div class="eduexp p-5 pt-0">
+                                <h5>L10</h5>
+                                <small class="text-brand">Trabalhando com os pull requests</small>
+                                <p class="mb-0">candidato egresso Sistema Público de Ensino Médio com renda familiar
+                                    bruta
+                                    mensal igual ou inferior a 1,5 salário mínimo nacional per capita autodeclarado
+                                    preto,
+                                    pardo ou indígena e Pessoa com Deficiência;</p>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="eduexp p-5 pt-0">
                                 <h5>L13 - Escola pública e pessoa com deficiência</h5>
                                 <small class="text-brand">Etapa final</small>
-                                <p class="mb-0">...</p>
+                                <p class="mb-0">candidato egresso do Sistema Público de Ensino Médio independentemente
+                                    da renda familiar e Pessoa com Deficiência;</p>
                             </div>
                         </div>
                         <div class="col-12">
                             <div class="eduexp p-5 pt-0 pb-0">
-                                <h5>L14 - Escola pública, renda não considerada, preto, pardo ou indígena e pessoa com deficiência</h5>
+                                <h5>L14 - Escola pública, renda não considerada, preto, pardo ou indígena e pessoa com
+                                    deficiência</h5>
                                 <small class="text-brand">Etapa final</small>
-                                <p class="mb-0">...</p>
+                                <p class="mb-0">candidato egresso do Sistema Público de Ensino Médio independentemente
+                                    da renda familiar, autodeclarado preto, pardo ou indígena e Pessoa com Deficiência.
+                                </p>
                             </div>
                         </div>
                     </div>
