--- a/Páginas/simulador_cotas.html
+++ b/Páginas/simulador_cotas.html
@@ -412,7 +412,7 @@
 
     <!--JS do código-->
     <script src="../js/main.js"></script>
-    <script src="../js/simulador.js"></script>
+    <script src="../js/simulatorTeste.js"></script>
 </body>
 
 </html>
