--- a/index.html
+++ b/index.html
@@ -189,40 +189,56 @@
               </div>
               <div class="modal-body">
                 <div class="modal-text">
-                  Para a maioria dos cursos de graduação presencial a UFT divide as vagas em 2 processos seletivos:
+                  Para a maioria dos cursos de graduação presencial a UFT divide as vagas em 2 processos
+                  seletivos:<br><br>
                   Concurso Vestibular – 50% das vagas são preenchidas através do tradicional Vestibular. Para ingresso
-                  no semestre de 2023/2as provas ocorreram em maio. Os interessados devem acompanhar as atualizações no
-                  site da UFT e no site da Comissão Permanente de Seleção (Copese). Sobre edições anteriores, veja aqui.
-                  SISU-Sistema de Seleção Unificada – a UFT oferece as outras 50% das vagas através deste processo que
-                  utiliza a nota do ENEM do ano anterior.
-                  Atenção: o Vestibular e o SISU são processos seletivos distintos, ou seja, os candidatos podem
-                  participar de ambos, simultaneamente. Em caso de seleção nas duas modalidades, o estudante deverá
-                  optar por uma delas.
+                  no
+                  semestre de 2023/2, as provas ocorreram em maio. Os interessados devem acompanhar as atualizações no
+                  site da
+                  UFT e no site da Comissão Permanente de Seleção (Copese). Sobre edições anteriores, veja <span
+                    class="keyword">aqui</span>.<br><br>
+                  <span class="keyword">SISU</span>-Sistema de Seleção Unificada – a UFT oferece as outras 50% das vagas
+                  através deste processo que utiliza a nota do ENEM do ano anterior.<br><br>
+                  <span class="keyword">Atenção</span>: o Vestibular e o SISU são processos seletivos distintos, ou
+                  seja, os
+                  candidatos podem participar de ambos, simultaneamente. Em caso de seleção nas duas modalidades, o
+                  estudante
+                  deverá optar por uma delas.<br><br>
                   Após a utilização destes dois processos seletivos ainda tiver vagas remanescentes de algum deles a
-                  instituição podeutilizar de outras formas de seleção:
-                  PSEnem - Processo Seletivo complementar utilizando unota do ENEM- Neste processo seletivo preencher as
-                  vagas não ocupadas pelo Vestibular e/ou SISU (2023/2) por razões de não ocupação, remanejamentos,
-                  desistências, cancelamentos, indeferimentos e demais razões pelas quais possa ocorrer a vacância
-                  durante o Processo Seletivo, para ingresso no 2º Semestre de 2023. O Processo Seletivo por Nota do
-                  Enem para ingresso nos cursos de graduação presenciais da UFT no 2º Semestre de 2023, é destinado
-                  exclusivamente aos candidatos que tenham participado de pelo menos uma das edições do Exame Nacional
-                  do Ensino Médio (ENEM) dos anos de 2020 a 2022, independente de participação ou inscrição em quaisquer
-                  outros processos seletivos. Veja o site do PSC 2023/2.
+                  instituição pode utilizar de outras formas de seleção:<br><br>
+                  <span class="keyword">PSEnem</span> - Processo Seletivo complementar utilizando a nota do ENEM - Neste
+                  processo seletivo preencher as vagas não ocupadas pelo Vestibular e/ou SISU (2023/2) por razões de não
+                  ocupação, remanejamentos, desistências, cancelamentos, indeferimentos e demais razões pelas quais
+                  possa
+                  ocorrer a vacância durante o Processo Seletivo, para ingresso no 2º Semestre de 2023. O Processo
+                  Seletivo
+                  por Nota do Enem para ingresso nos cursos de graduação presenciais da UFT no 2º Semestre de 2023, é
+                  destinado exclusivamente aos candidatos que tenham participado de pelo menos uma das edições do Exame
+                  Nacional do Ensino Médio (ENEM) dos anos de 2020 a 2022, independente de participação ou inscrição em
+                  quaisquer outros processos seletivos. Veja o site do <span class="keyword"><a
+                      href="http://www.copese.uft.edu.br/index.php?option=com_content&task=view&id=370&Itemid=268">PSC
+                      2023/2</a></span><br><br>
                   Também há processos seletivos específicos para os cursos abaixo. Clique em cada um deles para obter
-                  informações mais detalhadas:
-
-                  Letras LIBRAS – Porto Nacional
-                  Educação do Campo- Arraias e Tocantinópolis
-
-                  Graduações a Distância - ( Licenciaturas em Matemática, Física, Química, Música, Ciências Biológicas)
-
-                  Para quem já é aluno de graduação, existe o sistema de ocupação de vagas ociosas:
-
-                  Transferência Externa – para alunos de outras IES que já tenham integralizado um percentual específico
-                  do curso de origem, conforme edital
-                  Transferência Interna – para alunos da UFT que querem mudar de curso através de Processo seletivo
-                  especifico.
-                  Ingresso de Diplomado – para portadores de diploma de curso superior.
+                  informações mais detalhadas:<br><br>
+                  <span class="keyword"><a
+                      href="http://www.copese.uft.edu.br/index.php?option=com_content&task=category&sectionid=4&id=771&Itemid=382">LIBRAS</a></span>
+                  – Porto Nacional<br><br>
+                  <span class="keyword"><a
+                      href="http://www.copese.uft.edu.br/index.php?option=com_content&task=category&sectionid=4&id=777&Itemid=384">Educação
+                      do Campo</a></span> - Arraias e Tocantinópolis<br><br>
+                  <span class="keyword"><a
+                      href="http://www.copese.uft.edu.br/index.php?option=com_content&task=category&sectionid=4&id=776&Itemid=385">Graduações
+                      a Distância</a></span> - (Licenciaturas em Matemática, Física, Química, Música, Ciências
+                  Biológicas)<br><br>
+                  Para quem já é aluno de graduação, existe o sistema de ocupação de vagas ociosas:<br><br>
+                  <span class="keyword">Transferência Externa</span> – para alunos de outras IES que já tenham
+                  integralizado
+                  um percentual específico do curso de origem, conforme edital<br><br>
+                  <span class="keyword">Transferência Interna</span> – para alunos da UFT que querem mudar de curso
+                  através de
+                  Processo seletivo especifico.<br><br>
+                  <span class="keyword">Ingresso de Diplomado</span> – para portadores de diploma de curso
+                  superior.<br><br>
 
                 </div>
               </div>
@@ -265,32 +281,44 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
               </div>
               <div class="modal-body">
-                Nos processos seletivos (Vestibular e SISU) a UFT garanti a oferta nas seguintes cotas garantidas pela
-                Reserva Legal de Vagas (50%) para ingresso na graduação para candidatos egresso do sistema público de
-                ensino médio, e também tem Ações Afirmativas (5% quilombolas e 5% Indígenas)
-                Devendo o candidato escolher com atenção a sua modalidade de concorrência no momento de inscrição do
-                processo seletivo, não sendo permitido a alteração posteriormente. As vagas reservadas são divididas em
-                oito modalidades de cotas, destinadas exclusivamente aos candidatos que se enquadram nos critérios
-                abaixo:
-                GRUPO L1 - Candidatos com renda familiar bruta per capita igual ou inferior a 1,5 salário mínimo que
-                tenham cursado integralmente o ensino médio em escolas públicas;
-                GRUPO L2 - Candidatos autodeclarados pretos, pardos ou indígenas, com renda familiar bruta per capita
-                igual ou inferior a 1,5 salário mínimo e que tenham cursado integralmente o ensino médio em escolas
-                públicas;
-                GRUPO L5 - Candidatos que, independentemente da renda (art. 14, II, Portaria Normativa nº 18/2012 e suas
-                alterações), tenham cursado integralmente o ensino médio em escolas públicas;
-                GRUPO L6 - Candidatos autodeclarados pretos, pardos ou indígenas que, independentemente da renda (art.
-                14, II, Portaria Normativa nº 18/2012), tenham cursado integralmente o ensino médio em escolas públicas;
-                GRUPO L9 - Candidatos com deficiência que tenham renda familiar bruta per capita igual ou inferior a 1,5
-                salário mínimo e que tenham cursado integralmente o ensino médio em escolas públicas;
-                GRUPO L10 - Candidatos com deficiênciaautodeclarados pretos, pardos ou indígenas, que tenham renda
+                Nos processos seletivos (Vestibular e SISU) a UFT garante a oferta nas seguintes cotas, garantidas pela
+                Reserva Legal de Vagas (50%) para ingresso na graduação para candidatos egressos do sistema público de
+                ensino médio. Além disso, existem Ações Afirmativas (5% para quilombolas e 5% para Indígenas).<br><br>
+                O candidato deve escolher com atenção a sua modalidade de concorrência no momento da inscrição do
+                processo
+                seletivo, pois não será permitida alteração posteriormente. As vagas reservadas são divididas em oito
+                modalidades de cotas, destinadas exclusivamente aos candidatos que se enquadram nos critérios
+                abaixo:<br><br>
+                <span class="keyword">GRUPO L1</span> - Candidatos com renda familiar bruta per capita igual ou inferior
+                a
+                1,5 salário mínimo que tenham cursado integralmente o ensino médio em escolas públicas;<br><br>
+                <span class="keyword">GRUPO L2</span> - Candidatos autodeclarados pretos, pardos ou indígenas, com renda
                 familiar bruta per capita igual ou inferior a 1,5 salário mínimo e que tenham cursado integralmente o
-                ensino médio em escolas públicas;
-                GRUPO L13 - Candidatos com deficiência que, independentemente da renda (art. 14, II, Portaria Normativa
-                nº 18/2012 e suas alterações), tenham cursado integralmente o ensino médio em escolas públicas;
-                GRUPO L14 - Candidatos com deficiênciaautodeclarados pretos, pardos ou indígenas que, independentemente
-                da renda (art. 14, II, Portaria Normativa nº 18/2012 e suas alterações), tenham cursado integralmente o
-                ensino médio em escolas públicas.
+                ensino
+                médio em escolas públicas;<br><br>
+                <span class="keyword">GRUPO L5</span> - Candidatos que, independentemente da renda (art. 14, II,
+                Portaria
+                Normativa nº 18/2012 e suas alterações), tenham cursado integralmente o ensino médio em escolas
+                públicas;<br><br>
+                <span class="keyword">GRUPO L6</span> - Candidatos autodeclarados pretos, pardos ou indígenas que,
+                independentemente da renda (art. 14, II, Portaria Normativa nº 18/2012), tenham cursado integralmente o
+                ensino médio em escolas públicas;<br><br>
+                <span class="keyword">GRUPO L9</span> - Candidatos com deficiência que tenham renda familiar bruta per
+                capita igual ou inferior a 1,5 salário mínimo e que tenham cursado integralmente o ensino médio em
+                escolas
+                públicas;<br><br>
+                <span class="keyword">GRUPO L10</span> - Candidatos com deficiência autodeclarados pretos, pardos ou
+                indígenas, que tenham renda familiar bruta per capita igual ou inferior a 1,5 salário mínimo e que
+                tenham
+                cursado integralmente o ensino médio em escolas públicas;<br><br>
+                <span class="keyword">GRUPO L13</span> - Candidatos com deficiência que, independentemente da renda
+                (art.
+                14, II, Portaria Normativa nº 18/2012 e suas alterações), tenham cursado integralmente o ensino médio em
+                escolas públicas;<br><br>
+                <span class="keyword">GRUPO L14</span> - Candidatos com deficiência autodeclarados pretos, pardos ou
+                indígenas que, independentemente da renda (art. 14, II, Portaria Normativa nº 18/2012 e suas
+                alterações),
+                tenham cursado integralmente o ensino médio em escolas públicas.<br><br>
 
               </div>
               <div class="modal-footer">
